fix overflow

--- a/static/app.css
+++ b/static/app.css
@@ -71,6 +71,8 @@ main {
 	height: 100%;
 	max-height: 100%;
 	overflow-y: auto;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 h1 {
